Setup, extends, grid, header, logo, page layout
John, you need to make smaller commits more frequently

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,40 +16,16 @@
 </head>
 <body>
 
-<div class="l-cell">
-		<header class="l-header">
-		<div class="l-row">
-			<a class="logo" href="/">John D. Jameson</a>
+<header class="l-header">
+	<a class="l-header-logo" href="/">Jameson</a>
+</header>
 
-			<nav class="l-nav">
-				<ul>
-					<li><a href="/about/">About</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
+<!-- <div id="dev_log"></div> -->
 
-
-	<!-- <div id="dev_log"></div> -->
-
-	<div class="l-row">
-		<header class="blockHeader">
-			{% if page.title-display %}
-			<h1 class="blockHeader-main">{{ page.title-display }}</h1>
-			{% else %}
-			<h1 class="blockHeader-main">{{ page.title }}</h1>
-			{% endif %}
-
-			{% if page.tagline %}
-			<p class="blockHeader-support">{{ page.tagline }}</p>
-			{% endif %}
-		</header>
-	</div>
-
-	<main class="l-main">
+<div class="l-row">
+	<div class="l-cell">
 		{{content}}
-	</main>
-
+	</div>
 </div>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
