--- a/sass/core/_layout.sass
+++ b/sass/core/_layout.sass
@@ -6,39 +6,52 @@
 // *************************************
 
 // -------------------------------------
-//   Bucket
-// -------------------------------------
-
-.l-bucket
-
-// -------------------------------------
-//   Card
-// -------------------------------------
-
-.l-card
-
-// -------------------------------------
 //   Cell
 // -------------------------------------
 
 %l-cell, .l-cell
   margin: 0 auto
+  max-width: $l-maxWidth
   max-width: rem($l-maxWidth)
-  padding: 0 rem(60px)
+  padding: 0 ($base-whitespace)
+  padding: 0 rem($base-whitespace)
+  +respond-to (40em)
+    padding: 0 ($base-whitespace * 2)
+    padding: 0 rem($base-whitespace * 2)
+  +respond-to (65em)
+    padding: 0 ($base-whitespace * 3)
+    padding: 0 rem($base-whitespace * 3)
 
 // -------------------------------------
 //   Grid
 // -------------------------------------
 
 .l-grid
+  @extend %group
+  margin: 0 -$base-whitespace
+  margin: 0 rem(-$base-whitespace)
+  position: relative
 
-.l-grid-box
+%l-grid-box, .l-grid-box
+  padding: 0 $base-whitespace
+  padding: 0 rem($base-whitespace)
+
+@for $i from 1 through 12
+  .l-grid-box--#{$i}
+    @extend %l-grid-box
+    +respond-to(46em)
+      float: left
+      width: percentage($i / 12)
 
 // -------------------------------------
 //   Row
 // -------------------------------------
 
 .l-row
+  padding-bottom: $base-whitespace
+  padding-bottom: rem($base-whitespace)
+  padding-top: $base-whitespace
+  padding-top: rem($base-whitespace)
 
 // -------------------------------------
 //   Utilities
@@ -62,3 +75,36 @@
 %l-xspace, .l-xspace
   margin-bottom: rem($base-whitespace * 2)
 
+// -------------------------------------
+//   Header
+// -------------------------------------
+
+.l-header
+  @extend %l-space
+  background-color: $base-color-a
+  height: rem($base-whitespace * 4)
+  overflow: hidden
+
+  .l-header-logo
+    color: $base-background
+    display: block
+    font-size: rem($base-fontSize * 8)
+    font-weight: 900
+    line-height: 1
+    margin: 0
+    text-align: center
+    text-transform: uppercase
+    &:hover
+      background-color: mix($base-color-a, $base-background, 100%)
+
+// -------------------------------------
+//   Main Content Area
+// -------------------------------------
+
+.l-main
+  
+
+
+// -------------------------------------
+//   Support / Sidebar
+// -------------------------------------
