--- a/sass/core/_settings.sass
+++ b/sass/core/_settings.sass
@@ -9,7 +9,8 @@
 //   @font-face
 // -------------------------------------
 
-// ...
+// Typekit, fools. Hooray for JavaScript
+// dependencies.
 
 // -------------------------------------
 //   Variables
@@ -19,7 +20,10 @@
 
 $base-background: #fff
 $base-color: #222
-$base-link-color: #0053c9
+$base-color-a: #705993
+$base-link-color: $base-color-a
+$base-link-background: mix($base-color-a, $base-background, 25%)
+
 
 // ----- Base Borders & Box Shadows ----- //
 
@@ -29,7 +33,7 @@ $base-boxShadow: 0 1px 2px rgba($base-color, 0.25)
 
 // ----- Base Content ----- //
 
-$base-fontFamily: sans-serif
+$base-fontFamily: 'museo-sans', helvetica, arial, sans-serif
 $base-fontSize: 16px
 $base-lineHeight: 1.5
 
@@ -39,7 +43,7 @@ $base-whitespace: 20px
 
 // ----- Content ----- //
 
-$c-header-fontFamily: sans-serif
+$c-header-fontFamily: $base-fontFamily
 
 // ----- Layout ----- //
 
