Consolidated About page, wote copy, logo RWD

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="post">
 
-	<ul class="inlineList">
+	<ul class="list--inline">
 		<li class="post-date">{{ page.date | date: "%B %d, %Y" }}</li>
 		<li><a href="https://twitter.com/intent/tweet?text={{ page.title | cgi_escape }}+by+%40johndjameson+http%3A%2F%2Fjohndjameson.com{{page.url | cgi_escape}}">Tweet</a></li>
 	</ul>
