--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -24,8 +24,11 @@ body
 
 p
   @extend %fontSize-a
-  @extend %l-space
-  margin-top: 0
+  margin: 0 0 rem($base-whitespace)
+
+ol, ul
+  margin: 0 0 rem($base-whitespace)
+  padding: 0 0 0 rem($base-whitespace)
 
 // -------------------------------------
 //   Inline Content
@@ -39,5 +42,19 @@ a
   text-decoration: none
   &:hover,
   &:focus
-    +box-shadow(-0.125em 0 0 $base-link-background, 0.125em 0 0 $base-link-background)
     background-color: $base-link-background
+    +box-shadow(-0.125em 0 0 $base-link-background, 0.125em 0 0 $base-link-background)
+
+abbr
+  
+
+blockquote
+  margin: rem($base-whitespace * 2) 0
+  border-left: 4px solid $base-color-a
+  padding: 0 rem($base-whitespace * 2)
+
+em
+  font-style: italic
+
+strong
+  font-weight: bold
