--- a/sass/core/_content.sass
+++ b/sass/core/_content.sass
@@ -14,6 +14,7 @@ h4, h5, h6,
 .c-h1, .c-h2, .c-h3,
 .c-h4, .c-h5, .c-h6
   @extend %l-space
+  color: $base-header-color
   font-family: $c-header-fontFamily
   font-weight: bold
   margin-top: 0
@@ -50,4 +51,6 @@ h6, .c-h6, %c-h6
   font-size: 125%
 
 %c-shout, .c-shout
+  letter-spacing: 1px
   text-transform: uppercase
+  word-spacing: 1px
