--- a/sass/core/_settings.sass
+++ b/sass/core/_settings.sass
@@ -20,7 +20,9 @@
 
 $base-background: #fff
 $base-color: #222
+$base-color-soft: mix($base-color, $base-background, 70%)
 $base-color-a: #705993
+$base-header-color: #333
 $base-link-color: $base-color-a
 $base-link-background: mix($base-color-a, $base-background, 25%)
 
