--- a/sass/core/_content.sass
+++ b/sass/core/_content.sass
@@ -17,6 +17,7 @@ h4, h5, h6,
   color: $base-header-color
   font-family: $c-header-fontFamily
   font-weight: bold
+  line-height: 1.375
   margin-top: 0
 
 h1, .c-h1, %c-h1
