--- a/sass/core/_settings.sass
+++ b/sass/core/_settings.sass
@@ -50,3 +50,7 @@ $c-header-fontFamily: $base-fontFamily
 // ----- Layout ----- //
 
 $l-maxWidth: 980px
+
+// ----- Breakpoints ----- //
+
+$bp-grid: 46em
