--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@ layout: default
 	<ul class="list--inline">
 		<li class="post-date">{{ page.date | date: "%B %d, %Y" }}</li>
 		<li><a href="https://twitter.com/intent/tweet?text={{ page.title | cgi_escape }}+by+%40johndjameson+http%3A%2F%2Fjohndjameson.com{{page.url | cgi_escape}}">Tweet</a></li>
+		<li><a href="http://www.facebook.com/sharer.php?s=100&p[url]=http://johndjameson.com{{page.url | cgi_escape}}&p[title]={{page.title}}&p[summary]={{page.tagline}}">Share</a></li>
 	</ul>
 
 	{{content}}
@@ -22,3 +23,4 @@ layout: default
 	</div>
 
 </article>
+
