--- a/sass/application.sass
+++ b/sass/application.sass
@@ -47,6 +47,8 @@
 
 @import "modules/preview"
 
+@import "modules/post"
+
 // -------------------------------------
 //   Inbox
 // -------------------------------------
