--- a/sass/core/_helpers.sass
+++ b/sass/core/_helpers.sass
@@ -70,34 +70,58 @@
 %fontSize-aaa
   font-size: $base-fontSize * 0.75
   font-size: rem($base-fontSize * 0.75)
+  +respond-to($bp-fontSize-a)
+    font-size: $base-fontSize * 0.75 * 1.1
+    font-size: rem($base-fontSize * 0.75 * 1.1)
 
 %fontSize-aa
   font-size: $base-fontSize * 0.875
   font-size: rem($base-fontSize * 0.875)
+  +respond-to($bp-fontSize-a)
+    font-size: $base-fontSize * 0.875 * 1.125 
+    font-size: rem($base-fontSize * 0.875 * 1.125)
 
 %fontSize-a
   font-size: $base-fontSize
   font-size: rem($base-fontSize)
+  +respond-to($bp-fontSize-a)
+    font-size: $base-fontSize * 1.1
+    font-size: rem($base-fontSize * 1.1)
 
 %fontSize-b
   font-size: $base-fontSize * 1.125
   font-size: rem($base-fontSize * 1.125)
+  +respond-to($bp-fontSize-a)
+    font-size: $base-fontSize * 1.125 * 1.1 
+    font-size: rem($base-fontSize * 1.125 * 1.1)
 
 %fontSize-c
   font-size: $base-fontSize * 1.25
   font-size: rem($base-fontSize * 1.25)
+  +respond-to($bp-fontSize-a)
+    font-size: $base-fontSize * 1.25 * 1.1
+    font-size: rem($base-fontSize * 1.25 * 1.1)
 
 %fontSize-d
   font-size: $base-fontSize * 1.5
   font-size: rem($base-fontSize * 1.5)
+  +respond-to($bp-fontSize-a)
+    font-size: $base-fontSize * 1.5 * 1.1
+    font-size: rem($base-fontSize * 1.5 * 1.1)
 
 %fontSize-e
   font-size: $base-fontSize * 1.875
   font-size: rem($base-fontSize * 1.875)
+  +respond-to($bp-fontSize-a)
+    font-size: $base-fontSize * 1.875 * 1.1
+    font-size: rem($base-fontSize * 1.875 * 1.1)
 
 %fontSize-f
   font-size: $base-fontSize * 2.5
   font-size: rem($base-fontSize * 2.5)
+  +respond-to($bp-fontSize-a)
+    font-size: $base-fontSize * 2.5 * 1.1
+    font-size: rem($base-fontSize * 2.5 * 1.1)
 
 // -------------------------------------
 //   Animations
