--- a/sass/core/_layout.sass
+++ b/sass/core/_layout.sass
@@ -106,7 +106,7 @@
     text-align: center
     +text-shadow(1px 1px 0 black, 2px 2px 0 black, 3px 3px 0 black)
     text-transform: uppercase
-    &:hover
+    &:hover, &:focus
       background-color: mix($base-color-a, $base-background, 85%)
     +respond-to(25em)
       font-size: rem($base-fontSize * 4)
