--- a/sass/modules/_preview.sass
+++ b/sass/modules/_preview.sass
@@ -1,8 +1,7 @@
 // *************************************
 //
 //   Preview
-//   -> Chills on the home page,
-//      links to blog posts
+//   -> Links to blog posts
 //
 // *************************************
 
