--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -55,11 +55,14 @@ blockquote
   margin: rem($base-whitespace * 2) 0
   border-left: 4px solid $base-color-a
   padding: 0 rem($base-whitespace)
-  +respond-to(30em)
-    padding: 0 rem($base-whitespace * 2)
 
 em
   font-style: italic
 
 strong
   font-weight: bold
+
+sup
+  font-size: 0.7em
+  position: relative
+  top: -0.3em
