--- a/sass/core/_settings.sass
+++ b/sass/core/_settings.sass
@@ -41,6 +41,15 @@ $base-fontFamily: 'museo-sans', helvetica, tahoma, arial, sans-serif
 $base-fontSize: 16px
 $base-lineHeight: 1.5
 
+$base-fontSize-aaa: $base-fontSize * 0.75
+$base-fontSize-aa: $base-fontSize * 0.875
+// $base-fontSize-a: $base-fontSize
+$base-fontSize-b: $base-fontSize * 1.125
+$base-fontSize-c: $base-fontSize * 1.25
+$base-fontSize-d: $base-fontSize * 1.5
+$base-fontSize-e: $base-fontSize * 1.875
+$base-fontSize-f: $base-fontSize * 2.5
+
 // ----- Base Layout ----- //
 
 $base-whitespace: 20px
