--- a/sass/modules/_list.sass
+++ b/sass/modules/_list.sass
@@ -32,19 +32,16 @@
 // -------------------------------------
 
 .list--inline
+  display: inline-block
   list-style-type: none
   padding: 0
   li
     display: inline-block
     margin-right: 0.5em
-    &::after
+    &::before
       color: $base-link-background
       content: "\2022"
-      margin-left: 0.5em
-    &:last-of-type
-      &::after
-        content: ""
-        margin: 0
+      margin-right: 0.5em
 
 .list--table
   @extend %group
