--- a/sass/core/_helpers.sass
+++ b/sass/core/_helpers.sass
@@ -68,18 +68,18 @@
     height: 150%
 
 %fontSize-aaa
-  font-size: $base-fontSize * 0.75
-  font-size: rem($base-fontSize * 0.75)
+  font-size: $base-fontSize-aaa
+  font-size: rem($base-fontSize-aaa)
   +respond-to($bp-fontSize-a)
-    font-size: $base-fontSize * 0.75 * 1.1
-    font-size: rem($base-fontSize * 0.75 * 1.1)
+    font-size: $base-fontSize-aaa * 1.1
+    font-size: rem($base-fontSize-aaa * 1.1)
 
 %fontSize-aa
-  font-size: $base-fontSize * 0.875
-  font-size: rem($base-fontSize * 0.875)
+  font-size: $base-fontSize-aa
+  font-size: rem($base-fontSize-aa)
   +respond-to($bp-fontSize-a)
-    font-size: $base-fontSize * 0.875 * 1.125 
-    font-size: rem($base-fontSize * 0.875 * 1.125)
+    font-size: $base-fontSize-aa * 1.1 
+    font-size: rem($base-fontSize-aa * 1.1)
 
 %fontSize-a
   font-size: $base-fontSize
@@ -89,39 +89,39 @@
     font-size: rem($base-fontSize * 1.1)
 
 %fontSize-b
-  font-size: $base-fontSize * 1.125
-  font-size: rem($base-fontSize * 1.125)
+  font-size: $base-fontSize-b
+  font-size: rem($base-fontSize-b)
   +respond-to($bp-fontSize-a)
-    font-size: $base-fontSize * 1.125 * 1.1 
-    font-size: rem($base-fontSize * 1.125 * 1.1)
+    font-size: $base-fontSize-b * 1.1 
+    font-size: rem($base-fontSize-b * 1.1)
 
 %fontSize-c
-  font-size: $base-fontSize * 1.25
-  font-size: rem($base-fontSize * 1.25)
+  font-size: $base-fontSize-c
+  font-size: rem($base-fontSize-c)
   +respond-to($bp-fontSize-a)
-    font-size: $base-fontSize * 1.25 * 1.1
-    font-size: rem($base-fontSize * 1.25 * 1.1)
+    font-size: $base-fontSize-c * 1.1
+    font-size: rem($base-fontSize-c * 1.1)
 
 %fontSize-d
-  font-size: $base-fontSize * 1.5
-  font-size: rem($base-fontSize * 1.5)
+  font-size: $base-fontSize-d
+  font-size: rem($base-fontSize-d)
   +respond-to($bp-fontSize-a)
-    font-size: $base-fontSize * 1.5 * 1.1
-    font-size: rem($base-fontSize * 1.5 * 1.1)
+    font-size: $base-fontSize-d * 1.1
+    font-size: rem($base-fontSize-d * 1.1)
 
 %fontSize-e
-  font-size: $base-fontSize * 1.875
-  font-size: rem($base-fontSize * 1.875)
+  font-size: $base-fontSize-e
+  font-size: rem($base-fontSize-e)
   +respond-to($bp-fontSize-a)
-    font-size: $base-fontSize * 1.875 * 1.1
-    font-size: rem($base-fontSize * 1.875 * 1.1)
+    font-size: $base-fontSize-e * 1.1
+    font-size: rem($base-fontSize-e * 1.1)
 
 %fontSize-f
-  font-size: $base-fontSize * 2.5
-  font-size: rem($base-fontSize * 2.5)
+  font-size: $base-fontSize-f
+  font-size: rem($base-fontSize-f)
   +respond-to($bp-fontSize-a)
-    font-size: $base-fontSize * 2.5 * 1.1
-    font-size: rem($base-fontSize * 2.5 * 1.1)
+    font-size: $base-fontSize-f * 1.1
+    font-size: rem($base-fontSize-f * 1.1)
 
 // -------------------------------------
 //   Animations
