First post content pass, heading heights, smart quotes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@ Now have fun looking around. :)
 
 	<link rel="stylesheet" href="/css/application.css">
 	<link rel="author" href="https://plus.google.com/u/0/113914298266231922059/posts">
+	<link rel="alternate" type="application/rss+xml"  href="http://www.johndjameson.com/feed.xml" title="John D. Jameson">
 
 	<script type="text/javascript" src="//use.typekit.net/yhp6wqr.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
