--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -30,6 +30,7 @@ ol, ul
   @extend %fontSize-a
   margin: 0 0 rem($base-whitespace)
   padding: 0 0 0 rem($base-whitespace)
+  
   ol, ul
     margin: 0
 
@@ -43,6 +44,7 @@ a
   color: $base-link-color
   font-weight: bold
   text-decoration: none
+
   &:hover, &:focus
     background-color: $base-link-background
     +box-shadow(-0.125em 0 0 $base-link-background, 0.125em 0 0 $base-link-background)
@@ -52,9 +54,12 @@ abbr
   font-size: 95%
 
 blockquote
-  margin: rem($base-whitespace * 2) 0
+  margin: rem($base-whitespace) 0
   border-left: 4px solid $base-color-a
   padding: 0 rem($base-whitespace)
+
+  &:first-child
+    margin-top: 0
 
 em
   font-style: italic
