--- a/sass/modules/_post.sass
+++ b/sass/modules/_post.sass
@@ -64,7 +64,6 @@
 // -------------------------------------
 
 .post-title
-  line-height: 1.15
   margin-bottom: 0
 
 .post-meta
@@ -105,7 +104,7 @@
   p
     @extend %fontSize-aa
 
-  & :last-child
+  > :last-child
     margin-bottom: 0
 
 .post-footnotes
