--- a/sass/core/_content.sass
+++ b/sass/core/_content.sass
@@ -22,21 +22,27 @@ h4, h5, h6,
 
 h1, .c-h1, %c-h1
   @extend %fontSize-f
+  line-height: 1.15
 
 h2, .c-h2, %c-h2
   @extend %fontSize-e
+  line-height: 1.2
 
 h3, .c-h3, %c-h3
   @extend %fontSize-d
+  line-height: 1.25
 
 h4, .c-h4, %c-h4
   @extend %fontSize-c
+  line-height: 1.3
 
 h5, .c-h5, %c-h5
   @extend %fontSize-b
+  line-height: 1.375
 
 h6, .c-h6, %c-h6
   @extend %fontSize-a
+  line-height: 1.45
 
 // -------------------------------------
 //   Utilities
