--- a/sass/modules/_preview.sass
+++ b/sass/modules/_preview.sass
@@ -35,7 +35,7 @@
 // ----- Subpreview ----- //
 
 .preview-title
-	margin-bottom: rem($base-whitespace / 4)
+	// margin-bottom: rem($base-whitespace / 4)
 
 .preview-date
 	@extend %c-shout
