--- a/sass/modules/_post.sass
+++ b/sass/modules/_post.sass
@@ -10,6 +10,9 @@
 .post
   position: relative
 
+  h2
+    margin-top: rem($base-whitespace * 2)
+
   img
     max-width: 100%
   
@@ -74,6 +77,7 @@
 
 .post-lead
   @extend %fontSize-d
+  margin-bottom: 0
 
 .post-image--full
   max-width: 100%
