Fixed RSS link and feed

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 				<ul class="post-links">
 					<li><a href="https://twitter.com/intent/tweet?text={{ page.title | cgi_escape }}+by+%40johndjameson+http%3A%2F%2Fjohndjameson.com{{page.url | cgi_escape}}">Tweet</a></li>
 					<li><a href="http://www.facebook.com/sharer.php?s=100&p[url]=http://johndjameson.com{{page.url | cgi_escape}}&p[title]={{page.title}}&p[summary]={{page.lead}}">Share</a></li>
-					<li><a href="/feed.xml"><abbr>RSS</abbr></a></li>
+					<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
 				</ul>
 			</div>
 
