--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -53,6 +53,9 @@ abbr
   @extend %c-shout
   font-size: 95%
 
+b
+  font-weight: normal
+
 blockquote
   margin: rem($base-whitespace) 0
   border-left: 4px solid $base-color-a
