--- a/sass/core/_settings.sass
+++ b/sass/core/_settings.sass
@@ -76,7 +76,7 @@ $base-boxShadow: 0 1px 2px rgba($base-color, 0.25)
 
 // ----- Base Content ----- //
 
-$base-fontFamily: 'museo-sans', helvetica, tahoma, arial, sans-serif
+$base-fontFamily: 'museo-sans-rounded', helvetica, tahoma, arial, sans-serif
 $base-fontSize: 16px
 $base-lineHeight: 1.618
 
