--- a/sass/modules/_post.sass
+++ b/sass/modules/_post.sass
@@ -10,9 +10,6 @@
 .post
   position: relative
 
-  h2
-    margin-top: rem($base-whitespace * 2)
-
   img
     max-width: 100%
   
@@ -77,7 +74,8 @@
 
 .post-lead
   @extend %fontSize-c
-  margin-bottom: 0
+  +respond-to(50em)
+    @extend %fontSize-d
 
 .post-image--full
   max-width: 100%
