a11y checklist, ::selection style, <code> style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@ Now have fun looking around. :)
 </head>
 <body>
 
-	<header class="l-header">
-		<a class="l-header-logo" href="/">Jameson</a>
+	<header class="l-header" role="banner">
+		<nav role="navigation"><a class="l-header-logo" href="/">Jameson</a></nav>
 	</header>
 
 	<!-- <div id="dev_log"></div> -->
