--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+<main role="main">
 <div class="l-row">
 <div class="l-cell">
 
@@ -53,3 +54,5 @@ layout: default
 </div>
 </div>
 </div>
+
+</main>
