--- a/sass/core/_helpers.sass
+++ b/sass/core/_helpers.sass
@@ -67,6 +67,18 @@
     width: 0
     height: 150%
 
+.visuallyhidden, %visuallyhidden
+  border: 0
+  clip: rect(0 0 0 0)
+  height: 1px
+  margin: -1px
+  overflow: hidden
+  padding: 0
+  position: absolute
+  width: 1px
+
+// ----- Font Sizes (Responsive) ----- //
+
 %fontSize-aaa
   font-size: $base-fontSize-aaa
   font-size: rem($base-fontSize-aaa)
