--- a/sass/core/_settings.sass
+++ b/sass/core/_settings.sass
@@ -96,6 +96,7 @@ $base-whitespace: 20px
 // ----- Content ----- //
 
 $c-header-fontFamily: $base-fontFamily
+$c-mono-fontFamily: menlo, monaco, monospace
 
 // ----- Layout ----- //
 
