--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -18,6 +18,10 @@ body
   font-size: 100%
   line-height: $base-lineHeight
 
+::selection
+  background-color: mix($base-color-a, $base-background, 85%)
+  color: $base-background
+
 // -------------------------------------
 //   Block Content
 // -------------------------------------
@@ -63,6 +67,12 @@ blockquote
 
   &:first-child
     margin-top: 0
+
+code
+  +box-shadow(-0.125em 0 0 mix($base-link-background, $base-background, 50%), 0.125em 0 0 mix($base-link-background, $base-background, 50%))
+  background: mix($base-link-background, $base-background, 50%)
+  font-family: $c-mono-fontFamily
+  font-size: 90%
 
 em
   font-style: italic
